log
Wed, Apr 16, 2025  9:02:43 AM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
eeef3b7
Wed, Apr 16, 2025  9:26:45 AM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|5
total_score: 10/70
1f9b115
Wed, Apr 16, 2025  9:31:23 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
a728469
Wed, Apr 16, 2025  8:06:47 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:56:1: error: expected expression before '}' token
 }
 ^
b14ed7d
Wed, Apr 16, 2025  8:07:07 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:56:1: error: expected expression before '}' token
 }
 ^
4f495e6
Wed, Apr 16, 2025  8:07:49 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
a0ce6b0
Fri, Apr 18, 2025  3:01:22 PM: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
529264b
Fri, Apr 18, 2025  3:06:45 PM: 
 hashmap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  5|4
total_score: 30/70
5c90249
Fri, Apr 18, 2025  3:15:47 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  8|3
total_score: 40/70
17f150d
Fri, Apr 18, 2025  3:23:01 PM: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:79:14: error: statement with no effect [-Werror=unused-value]
     par->key == NULL ;
              ^
cc1.exe: all warnings being treated as errors
7ea67db
